--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.8.0"
   }
 }
