--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"],
+      "@app/*": ["./src/app/*"],
       "@components/*": ["./src/app/components/*"],
-      "@layouts/*": ["./src/app/layouts/*"],
-      "@pages/*": ["./src/app/pages/*"],
-      "@styles/*": ["./src/app/styles/*"],
-      "@utils/*": ["./src/app/utils/*"],
-      "@assets/*": ["./src/app/assets/*"],
-      "@hooks/*": ["./src/app/hooks/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@hooks/*": ["./src/hooks/*"]
     }
   }
 }
