--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-seo": "^6.1.0",
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
     "react": "18.2.0",
