♻️ refactor: structure architucture

--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx,css,md,json}"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.29.18",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
-    "next-seo": "^6.1.0",
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
     "react": "18.2.0",
