--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
       "@styles/*": ["./src/styles/*"],
       "@utils/*": ["./src/utils/*"],
       "@assets/*": ["./src/assets/*"],
-      "@hooks/*": ["./src/hooks/*"]
+      "@hooks/*": ["./src/hooks/*"],
+      "@api/*": ["./src/pages/api/*"]
     }
   }
 }
