--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.29.19",
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
+    "axios": "^1.4.0",
+    "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "local-storage": "^2.0.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
