--- a/package.json
+++ b/package.json
@@ -3,30 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx,css,md,json}"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tanstack/react-query": "^4.29.19",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
-    "local-storage": "^2.0.0",
-    "next": "13.4.7",
-    "postcss": "8.4.24",
-    "prettier": "^2.8.8",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.8.0"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.2",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.2",
+    "mobx-devtools-mst": "^0.9.30",
+    "postcss": "8.4.25",
+    "prettier": "^3.0.0",
+    "tailwindcss": "3.3.2",
+    "vite": "^4.4.2"
   }
 }
