--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "axios": "^1.4.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
