--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "axios": "^1.4.0",
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.17",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "10.4.14",
@@ -38,6 +39,6 @@
     "postcss": "8.4.27",
     "prettier": "^3.0.0",
     "tailwindcss": "3.3.3",
-    "vite": "^4.4.7"
+    "vite": "^4.4.8"
   }
 }
